# Readinova

./: .gitattributes  .gitignore  Makefile  README.md  go.mod  go.work  lefthook.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: README.md  go.mod  go.sum
apps/web/: README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
apps/web/src/: App.tsx  index.css
crates/: Cargo.toml
crates/scoring/: Cargo.toml  build.rs
crates/scoring/src/: engine.rs  ffi.rs  lib.rs  tests.rs  types.rs
crates/scoring/tests/: golden_test.rs
crates/scoring/tests/golden/: expected_output.json  fixture.json
docs/: README.md  framework-authoring-guide.md
docs/adr/: 0001-record-architecture-decisions.md
infra/: README.md  docker-compose.yml
libs/go-scoring/: README.md  go.mod
libs/go-scoring/scoring/: doc.go  golden_test.go  (+4 more)
migrations/: 00001_frameworks_dimensions.sql  00002_sub_dimensions_indicators.sql  00003_questions_rubric_levels.sql  00004_industry_weight_overrides.sql  00005_framework_invariant_triggers.sql  00006_published_framework_immutability.sql  00007_organisations_users.sql  00008_organisation_members_invitations.sql  00009_audit_log.sql  00010_rls_tenant_context.sql  00011_refresh_tokens.sql  00012_assessments.sql  00013_responses.sql  00014_scoring_runs.sql  00015_billing.sql  00016_evidence.sql  00017_perception_gap.sql  00018_audit_artefacts.sql  00019_stripe_webhook_log.sql  00020_evidence_signals_unique.sql  README.md
scripts/: README.md  test-db.sh
tests/k6/: smoke.js
(+86 files in other folders)
