[package]
name = "scoring"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
